--- a/cf/CMakeLists.txt
+++ b/cf/CMakeLists.txt
@@ -4,10 +4,10 @@ project(cf)
 # set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -std=c99")
 # set(SOURCE_DIR "e:/code/Hydro/RHESSys/cf")
 set(SRCDIR src)
-AUX_SOURCE_DIRECTORY(./${SRCDIR} SRCS)
+AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/${SRCDIR} SRCS)
 set(TESTS_ROOTDIR test)
 set(SRCDIR_TESTS ${TESTS_ROOTDIR}/src)
-AUX_SOURCE_DIRECTORY(./${SRCDIR_TESTS} SRCS_TESTS)
+AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/${SRCDIR_TESTS} SRCS_TESTS)
 set(OBJDIR_TESTS ${TESTS_ROOTDIR}/objects)
 set(DOCDIR docs)
 set(OBJDIR objects)
@@ -15,5 +15,5 @@ file(MAKE_DIRECTORY ${DOCDIR})
 file(MAKE_DIRECTORY ${OBJDIR})
 file(MAKE_DIRECTORY ${OBJDIR_TESTS})
 # set(PROJECT_BINARY_DIR "e:/code/Hydro/RHESSys/bin")
-add_custom_target(cf COMMAND mingw32-make -C ${SOURCE_DIR}
-                         RHESSYS_BIN=${PROJECT_BINARY_DIR})
+add_custom_target(cf COMMAND make -C ${CMAKE_CURRENT_SOURCE_DIR}
+                  CF_BIN=${PROJECT_BINARY_DIR})
