--- a/rhessys/CMakeLists.txt
+++ b/rhessys/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required(VERSION 2.8.4)
 project(rhessys)
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -std=c99")
-set(SOURCE_DIR .)
-add_custom_target(rhessys COMMAND mingw32-make -C ${SOURCE_DIR}
-        RHESSYS_BIN=${PROJECT_BINARY_DIR})
+add_custom_target(rhessys COMMAND make -C ${CMAKE_CURRENT_SOURCE_DIR}
+                  RHESSYS_BIN=${PROJECT_BINARY_DIR})
